--- a/MusicPlayer/MainWindow.xaml
+++ b/MusicPlayer/MainWindow.xaml
@@ -5,17 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicPlayer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="355.333" Width="534.333" SizeToContent="WidthAndHeight" WindowStartupLocation="Manual">
+        Title="MusicLayer" Height="800" Width="600" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="275*"/>
-            <RowDefinition Height="9*"/>
+            <RowDefinition Height="247*"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="7*"/>
+            <RowDefinition Height="0*"/>
+            <RowDefinition Height="2*"/>
             <RowDefinition Height="41*"/>
         </Grid.RowDefinitions>
-        <Slider x:Name="MusicPositionSlider" Margin="10,0,19,11.5" Background="#FFEEEEEE" BorderBrush="White" Foreground="White" UseLayoutRounding="False" Grid.Row="2" Height="19.5" VerticalAlignment="Bottom" ValueChanged="OnValueChanged" IsMoveToPointEnabled="True"/>
+        <Slider x:Name="MusicPositionSlider" Margin="10,0,10,11.5" Background="#FFEEEEEE" BorderBrush="White" Foreground="White" UseLayoutRounding="False" Grid.Row="7" Height="19.5" VerticalAlignment="Bottom" ValueChanged="OnValueChanged" IsMoveToPointEnabled="True"/>
         <Button x:Name="LoadTracksButton" Content="Load tracks" Margin="0,10,18,0" Click="OnClickLoadButton" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top"/>
-        <TextBlock x:Name="TimelinePlaybackValue" Margin="10,0,0,34" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Row="1" HorizontalAlignment="Left" Text="0:00" Height="16" Width="31" Grid.RowSpan="2"/>
-        <ListBox x:Name="MusicListBox" MouseDoubleClick="OnItemMouseDoubleClicked" Margin="10,10,304,35"/>
-        <Button x:Name="PlayOrPauseButtonUI" Content="State" Margin="0,0,19,36" Click="PlayOrPauseButton" Cursor="Hand" RenderTransformOrigin="1,1" HorizontalAlignment="Right" Width="74" Grid.RowSpan="3" Height="20" VerticalAlignment="Bottom"/>
+        <TextBlock x:Name="TimelinePlaybackValue" Margin="10,0,0,34" TextWrapping="Wrap" VerticalAlignment="Bottom" Grid.Row="4" HorizontalAlignment="Left" Text="0:00" Height="16" Width="34" Grid.RowSpan="4"/>
+        <ListBox x:Name="MusicListBox" MouseDoubleClick="OnItemMouseDoubleClicked" Margin="10,10,304,8"/>
+        <Button x:Name="PlayOrPauseButtonUI" Content="State" Margin="0,0,10,38" Click="PlayOrPauseButton" Cursor="Hand" RenderTransformOrigin="1,1" Grid.RowSpan="5" Height="20" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="74" Grid.Row="3"/>
+        <TextBlock x:Name="CurrentTrackTextBlock" Margin="39,0,363,34" Grid.Row="4" Grid.RowSpan="4" TextWrapping="Wrap" Text="TextBlock" Height="16" VerticalAlignment="Bottom"/>
+        <CheckBox x:Name="LoopedCheckbox" Content="Repeat" Margin="0,0,89,37" Width="61" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Grid.Row="7" VerticalContentAlignment="Bottom" Height="17" VerticalAlignment="Bottom"/>
+        <CheckBox x:Name="AutoNextCheckbox" Content="Auto next" Margin="0,0,155,37" HorizontalContentAlignment="Right" HorizontalAlignment="Right" Width="74" VerticalContentAlignment="Bottom" Height="19" VerticalAlignment="Bottom" Grid.Row="7"/>
     </Grid>
 </Window>
